--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@ title: Blog
 {% for post in paginator.posts %}
 
    <!-- here add you post markup -->
+   <div id="title">
    <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
-   <p class="author">
-    <span class="date">{{post.date}}</span>
-  </p>
+   </div>
   <div class="content">
     {{ post.content }}
   </div>
+  <hr>
 {% endfor %}
 
 <!-- Pagination links -->
