--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@ title: Blog
    <div id="title">
    <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
    </div>
+   <div id="item">
   <div class="content">
     {{ post.content }}
   </div>
-  <hr>
+  </div>
 {% endfor %}
 
 <!-- Pagination links -->
