--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ description: ""
 临于波涛者，当惊涛拍之，卷起千堆雪，而不曾退却  
 </p>
 <p>
-八零后  
+八零后，勤思考，乐分享，爱生活
 </p>
 <div>
 <a href="http://weibo.com/liaolinbo">@weibo</a>
