--- a/about.html
+++ b/about.html
@@ -5,22 +5,19 @@ description: ""
 ---
 
 <div id="about">
+<p> 临于波涛者，当惊涛拍之，卷起千堆雪，而不曾退却  </p>
+<p> 八零后，勤思考，乐分享，爱生活 </p>
+<p> 网上足迹</p>
+<ul>
+    <li> <a href="http://weibo.com/liaolinbo">@weibo</a></li>
+    <li><a href="http://www.douban.com/people/llbgurs">@douban</a></li>
+    <li><a href="http://bulaoge.com/?llbgurs">旧年博客</a></li>
+    <li>gtalk: llbgurs@gmail.com</li>
+</ul>
 <p>
-临于波涛者，当惊涛拍之，卷起千堆雪，而不曾退却  
-</p>
-<p>
-八零后，勤思考，乐分享，爱生活
-</p>
-<div>
-<a href="http://weibo.com/liaolinbo">@weibo</a>
+作品集:
+<ul>
+    <li><a href="books/poem/poems.pdf">《冷月无声》</a></li>
+</ul>
 </div>
-<div>
-<a href="http://www.douban.com/people/llbgurs">@douban</a>
-</div>
-<div>
-<a href="http://bulaoge.com/?llbgurs">旧年博客</a>
-</div>
-<div>
-    gtalk: llbgurs@gmail.com
-</div>
-</div>
+
