--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@ description: ""
 <p>
 作品集:
 <ul>
+    <li><a href="http://book.douban.com/subject/6014019/">《从实例走进OPhone世界》</a></li>
     <li><a href="books/poem/poems.pdf">《冷月无声》</a></li>
 </ul>
 </div>
